api is send to the router

--- a/views/patent.ejs
+++ b/views/patent.ejs
@@ -9,11 +9,11 @@
 <body>
     <h3>patent api</h3>
 
-    <!-- <% articles.forEach(function(articles,index){%> 
+     <% articles.results.forEach(function(article,index){ %> 
         
-        <%- articles.title %>
+        <%- article.inventionTitle %>
 
-  <%  }) %> -->
+  <%  }) %> 
 </body>
 </html>
 
